--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="nav_bar">
-      <div class="nav-logo border"><img src="images.png" alt="amazon logo"></div>
+      <div class="nav-logo border"><img src="https://pngimg.com/uploads/amazon/amazon_PNG13.png" alt="amazon logo"></div>
       
       <div class="nav_address border">
         <p class="deliver_to">Deliver to</p>
